--- a/app-spec-java-jre-v18.toml
+++ b/app-spec-java-jre-v18.toml
@@ -3,7 +3,8 @@ roles = [101, 100]
 type_tags = ["runtime"]
 
 [meta]
-  name = "java-jre18"
+  id = "java-jre18"
+  name = "Java JRE 1.8"
   version = "1.0"
   subtitle = "Java JRE 1.8 运行环境"
 
@@ -30,7 +31,7 @@ type_tags = ["runtime"]
 [exp_deploy]
   rep_min = 1
   rep_max = 128
-  sys_state = 1
+  sys_state = 2
   network_mode = 1
 
 [[urls]]
